--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
-    "sort-by": "^1.2.0"
+    "react-tooltip": "^5.20.0",
+    "sort-by": "^1.2.0",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
